src/Components/record/RecordCell.module.css
.stampCell {
  border: 1px solid var(--color-gray-60);
  padding: 8px;
  text-align: center;
  aspect-ratio: 1 / 1;
}

.container {
  width: 100%;
  height: 100%;
}

.emptyContainer {
  position: relative;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  z-index: 0;
}

.emptyContainer::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.3;
  z-index: -1;
}

.emptyContainer.stadiumType::before {
  background: url("/images/uniform_home.png") center center / 100% auto
    no-repeat;
}

.emptyContainer.homeType {
  width: 90%;
}

.emptyContainer.homeType::before {
  background: url("/images/home_sticker.png") center center / 100% auto
    no-repeat;
}

.emptyContainer p {
  color: var(--color-navy-90);
  font-weight: 500;
}

.recordCell {
  position: relative;
  text-align: center;
  aspect-ratio: 1 / 1;
}

.resultContainer {
  display: inline-flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.resultContainer p {
  font-size: 0.9rem;
  font-weight: 500;
}

.resultContainer.stadiumType.homeStadium {
  color: black;
  background: url("/images/uniform_home.png") center center / 100% auto
    no-repeat;
}

.resultContainer.stadiumType.awayStadium {
  color: var(--color-white);
  background: url("/images/uniform_away.png") center center / 100% auto
    no-repeat;
}

.resultContainer.homeType {
  color: black;
  background: url("/images/home_sticker.png") center center / 100% auto
    no-repeat;
  width: 90%;
}

.resultText.win {
  color: var(--color-lightblue);
  font-weight: 700;
}

.resultText.lose {
  color: var(--color-gray-40);
}

.deletedBtn {
  /* display: block;
  color: var(--color-gray-40);
  position: absolute;
  border-radius: 50%;
  top: 4px;
  right: 4px;
  transition: var(--transition-base); */

  position: absolute;
  top: 6px;
  right: 6px;
  width: 18px;
  height: 18px;
  font-size: 12px;
  border-radius: 50%;
  background: rgba(0, 0, 0, 0.6);
  color: white;
  font-size: 12px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.deletedBtn:hover {
  cursor: pointer;
  font-weight: bold;
  transform: scale(1.1);
  color: var(--color-pink-20);
}

